[tests] able to run tests when built w/o pcre
perl test framework now runs most tests even when lighttpd has been
built without pcre support, though some tests which rely on regex
are skipped (tests/core-condition.t)

--- a/tests/fastcgi-responder.conf
+++ b/tests/fastcgi-responder.conf
@@ -25,7 +25,7 @@ $HTTP["host"] == "auth.example.org" {
 
     server.name = "auth.example.org"
 
-    $HTTP["url"] =~ "\.php$" {
+    $HTTP["url"] =$ ".php" {
 	auth.backend.htpasswd.userfile = env.SRCDIR + "/tmp/lighttpd/lighttpd.htpasswd"
 	auth.backend = "htpasswd"
 	auth.require = (
