--- a/tests/proxy.conf
+++ b/tests/proxy.conf
@@ -10,7 +10,6 @@ server.tag                 = "Proxy"
 
 server.compat-module-load = "disable"
 server.modules = (
-	"mod_rewrite",
 	"mod_proxy",
 	"mod_accesslog",
 )
@@ -24,7 +23,6 @@ proxy.server = ( "" => (
 		"port" => env.EPHEMERAL_PORT,
 	),
 ))
-
-url.rewrite = (
-	"^/rewrite/all(/.*)$" => "/cgi.pl?$1",
+proxy.header = (
+	"map-urlpath" => ( "/rewrite/all" => "/cgi.pl?" )
 )
