--- a/tests/condition.conf
+++ b/tests/condition.conf
@@ -25,21 +25,21 @@ mimetype.assign = (
 )
 
 url.redirect = (
-	"^" => "/default",
+	"" => "/default",
 )
 
 $HTTP["host"] == "www.example.org" {
 	server.document-root = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org/pages/"
 	server.name = "www.example.org"
 	url.redirect = (
-		"^" => "/match_1",
+		"" => "/match_1",
 	)
 }
 else $HTTP["host"] == "test1.example.org" {
 	server.document-root = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org/pages/"
 	server.name = "test1.example.org"
 	url.redirect = (
-		"^" => "/match_2",
+		"" => "/match_2",
 	)
 }
 # comments
@@ -47,7 +47,7 @@ else $HTTP["host"] == "test2.example.org" {
 	server.document-root = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org/pages/"
 	server.name = "test2.example.org"
 	url.redirect = (
-		"^" => "/match_3",
+		"" => "/match_3",
 	)
 }
 
@@ -57,13 +57,13 @@ else $HTTP["host"] == "test3.example.org" {
 	server.document-root = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org/pages/"
 	server.name = "test3.example.org"
 	url.redirect = (
-		"^" => "/match_4",
+		"" => "/match_4",
 	)
 
 	# comments
 	$HTTP["url"] == "/index.html" {
 		url.redirect = (
-			"^" => "/match_5",
+			"" => "/match_5",
 		)
 	}
 }
@@ -72,12 +72,12 @@ else $HTTP["host"] == "test4.example.org" {
 	server.document-root = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org/pages/"
 	server.name = "test4.example.org"
 	url.redirect = (
-		"^" => "/match_6",
+		"" => "/match_6",
 	)
 
-	$HTTP["url"] =~ "^/subdir/" {
+	$HTTP["url"] =^ "/subdir/" {
 		url.redirect = (
-			"^" => "/match_7",
+			"" => "/match_7",
 		)
 	}
 }
@@ -86,7 +86,7 @@ else $HTTP["host"] == "test.example.org" {
 	server.name = "test.example.org"
 	var.myvar = "good"
 	var.one = 1
-	include "var-include-sub.conf"
+	include env.condition_include_file
 }
 
 $HTTP["url"] != "/show/other/server-tag" {
