[doc] regenerate doc/config/conf.d/mime.conf
(matches preferred syntax for Content-Type from upcoming HTTP spec rev)

--- a/doc/config/conf.d/mime.conf
+++ b/doc/config/conf.d/mime.conf
@@ -38,6 +38,8 @@
 ## This matches all extensions and acts as default mime type, and enables
 ## caching for those.
 mimetype.assign = (
+	".sarif.json" => "application/sarif+json",
+	".sarif-external-properties.json" => "application/sarif-external-properties+json",
 	".1905.1" => "application/vnd.ieee.1905",
 	".tar.bz2" => "application/x-gtar-compressed",
 	".tar.gz" => "application/x-gtar-compressed",
@@ -53,6 +55,7 @@ mimetype.assign = (
 	".dit" => "application/DIT",
 	".lxf" => "application/LXF",
 	".mf4" => "application/MF4",
+	".oda" => "application/ODA",
 	".odx" => "application/ODX",
 	".pdx" => "application/PDX",
 	".ez" => "application/andrew-inset",
@@ -77,6 +80,7 @@ mimetype.assign = (
 	".cdmiq" => "application/cdmi-queue",
 	".cellml" => "application/cellml+xml",
 	".cml" => "application/cellml+xml",
+	".1clr" => "application/clr",
 	".cmsc" => "application/cms",
 	".cpl" => "application/cpl+xml",
 	".csrattrs" => "application/csrattrs",
@@ -132,6 +136,7 @@ mimetype.assign = (
 	".metalink" => "application/metalink+xml",
 	".meta4" => "application/metalink4+xml",
 	".mets" => "application/mets+xml",
+	".h5" => "application/mipc",
 	".maei" => "application/mmt-aei+xml",
 	".musd" => "application/mmt-usd+xml",
 	".mods" => "application/mods+xml",
@@ -152,7 +157,6 @@ mimetype.assign = (
 	".lha" => "application/octet-stream",
 	".lzh" => "application/octet-stream",
 	".so" => "application/octet-stream",
-	".oda" => "application/oda",
 	".opf" => "application/oebps-package+xml",
 	".ogx" => "application/ogg",
 	".owx" => "application/owl+xml",
@@ -202,6 +206,8 @@ mimetype.assign = (
 	".roa" => "application/rpki-roa",
 	".rss" => "application/rss+xml",
 	".rtf" => "application/rtf",
+	".sarif" => "application/sarif+json",
+	".sarif-external-properties" => "application/sarif-external-properties+json",
 	".scim" => "application/scim+json",
 	".scq" => "application/scvp-cv-request",
 	".scs" => "application/scvp-cv-response",
@@ -260,6 +266,7 @@ mimetype.assign = (
 	".uis" => "application/urc-uisocketdesc+xml",
 	".vxml" => "application/voicexml+xml",
 	".vcj" => "application/voucher-cms+json",
+	".wasm" => "application/wasm",
 	".wif" => "application/watcherinfo+xml",
 	".wgt" => "application/widget",
 	".wsdl" => "application/wsdl+xml",
@@ -413,6 +420,9 @@ mimetype.assign = (
 	".clkw" => "application/vnd.crick.clicker.wordbank",
 	".wbs" => "application/vnd.criticaltools.wbs+xml",
 	".ssvc" => "application/vnd.crypto-shade-file",
+	".c9r" => "application/vnd.cryptomator.encrypted",
+	".c9s" => "application/vnd.cryptomator.encrypted",
+	".cryptomator" => "application/vnd.cryptomator.vault",
 	".pml" => "application/vnd.ctc-posml",
 	".ppd" => "application/vnd.cups-ppd",
 	".curl" => "application/vnd.curl",
@@ -493,6 +503,7 @@ mimetype.assign = (
 	".fzs" => "application/vnd.fuzzysheet",
 	".txd" => "application/vnd.genomatix.tuxedo",
 	".ggb" => "application/vnd.geogebra.file",
+	".ggs" => "application/vnd.geogebra.slides",
 	".ggt" => "application/vnd.geogebra.tool",
 	".gex" => "application/vnd.geometry-explorer",
 	".gre" => "application/vnd.geometry-explorer",
@@ -573,6 +584,7 @@ mimetype.assign = (
 	".skp" => "application/vnd.koan",
 	".skt" => "application/vnd.koan",
 	".sse" => "application/vnd.kodak-descriptor",
+	".las" => "application/vnd.las",
 	".lasjson" => "application/vnd.las.las+json",
 	".lasxml" => "application/vnd.las.las+xml",
 	".lbd" => "application/vnd.llamagraphics.life-balance.desktop",
@@ -662,6 +674,8 @@ mimetype.assign = (
 	".mus" => "application/vnd.musician",
 	".msty" => "application/vnd.muvee.style",
 	".taglet" => "application/vnd.mynfc",
+	".line" => "application/vnd.nebumind.line",
+	".nebul" => "application/vnd.nebumind.line",
 	".bkm" => "application/vnd.nervana",
 	".entity" => "application/vnd.nervana",
 	".kcm" => "application/vnd.nervana",
@@ -741,7 +755,7 @@ mimetype.assign = (
 	".paw" => "application/vnd.pawaafile",
 	".str" => "application/vnd.pg.format",
 	".ei6" => "application/vnd.pg.osasli",
-	".pil" => "application/vnd.piaccess.application-license",
+	".pil" => "application/vnd.piaccess.application-licence",
 	".efif" => "application/vnd.picsel",
 	".wg" => "application/vnd.pmi.widget",
 	".plf" => "application/vnd.pocketlearn",
@@ -827,6 +841,7 @@ mimetype.assign = (
 	".stw" => "application/vnd.sun.xml.writer.template",
 	".sus" => "application/vnd.sus-calendar",
 	".susp" => "application/vnd.sus-calendar",
+	".scl" => "application/vnd.sycle+xml",
 	".sis" => "application/vnd.symbian.install",
 	".xsm" => "application/vnd.syncml+xml",
 	".bdm" => "application/vnd.syncml.dm+wbxml",
@@ -968,6 +983,7 @@ mimetype.assign = (
 	".enw" => "audio/EVRCNW",
 	".evw" => "audio/EVRCWB",
 	".l16" => "audio/L16",
+	".qcp" => "audio/QCELP",
 	".smv" => "audio/SMV",
 	".aac" => "audio/aac",
 	".adts" => "audio/aac",
@@ -994,10 +1010,10 @@ mimetype.assign = (
 	".spx" => "audio/ogg",
 	".psid" => "audio/prs.sid",
 	".sid" => "audio/prs.sid",
-	".qcp" => "audio/qcelp",
+	".sofa" => "audio/sofa",
 	".loas" => "audio/usac",
 	".xhe" => "audio/usac",
-	".koz" => "audio/vnd.audikoz",
+	".koz" => "audio/vnd.audiokoz",
 	".uva" => "audio/vnd.dece.audio",
 	".uvva" => "audio/vnd.dece.audio",
 	".eol" => "audio/vnd.digital-winds",
@@ -1047,6 +1063,8 @@ mimetype.assign = (
 	".exr" => "image/aces",
 	".avci" => "image/avci",
 	".avcs" => "image/avcs",
+	".avif" => "image/avif",
+	".hif" => "image/avif",
 	".bmp" => "image/bmp",
 	".dib" => "image/bmp",
 	".cgm" => "image/cgm",
@@ -1076,6 +1094,7 @@ mimetype.assign = (
 	".jpm" => "image/jpm",
 	".jpf" => "image/jpx",
 	".jpx" => "image/jpx",
+	".jxl" => "image/jxl",
 	".jxr" => "image/jxr",
 	".jxra" => "image/jxrA",
 	".jxrs" => "image/jxrS",
@@ -1084,6 +1103,7 @@ mimetype.assign = (
 	".jxsi" => "image/jxsi",
 	".jxss" => "image/jxss",
 	".ktx" => "image/ktx",
+	".ktx2" => "image/ktx2",
 	".png" => "image/png",
 	".btf" => "image/prs.btif",
 	".btif" => "image/prs.btif",
@@ -1115,6 +1135,7 @@ mimetype.assign = (
 	".ico" => "image/vnd.microsoft.icon",
 	".apng" => "image/vnd.mozilla.apng",
 	".mdi" => "image/vnd.ms-modi",
+	".b16" => "image/vnd.pco.b16",
 	".hdr" => "image/vnd.radiance",
 	".rgbe" => "image/vnd.radiance",
 	".xyze" => "image/vnd.radiance",
@@ -1178,50 +1199,58 @@ mimetype.assign = (
 	".moml" => "model/vnd.moml+xml",
 	".mts" => "model/vnd.mts",
 	".ogex" => "model/vnd.opengex",
+	".pyo" => "model/vnd.pytha.pyox",
+	".pyox" => "model/vnd.pytha.pyox",
+	".vds" => "model/vnd.sap.vds",
 	".usdz" => "model/vnd.usdz+zip",
 	".bsp" => "model/vnd.valve.source.compiled-map",
 	".vtu" => "model/vnd.vtu",
 	".vpm" => "multipart/voice-message",
 	".bmed" => "multipart/vnd.bint.med-plus",
+	".sgm" => "text/SGML",
+	".sgml" => "text/SGML",
 	".appcache" => "text/cache-manifest",
 	".manifest" => "text/cache-manifest",
 	".ics" => "text/calendar",
 	".ifb" => "text/calendar",
-	".css" => "text/css; charset=utf-8",
-	".csv" => "text/csv; charset=utf-8",
+	".CQL" => "text/cql",
+	".css" => "text/css;charset=utf-8",
+	".csv" => "text/csv;charset=utf-8",
 	".csvs" => "text/csv-schema",
 	".soa" => "text/dns",
 	".zone" => "text/dns",
+	".gff3" => "text/gff3",
 	".htm" => "text/html",
 	".html" => "text/html",
 	".sandboxed" => "text/html-sandboxed",
 	".cnd" => "text/jcr-cnd",
-	".markdown" => "text/markdown; charset=utf-8",
-	".md" => "text/markdown; charset=utf-8",
+	".markdown" => "text/markdown;charset=utf-8",
+	".md" => "text/markdown;charset=utf-8",
 	".miz" => "text/mizar",
 	".n3" => "text/n3",
-	".asc" => "text/plain; charset=utf-8",
-	".c" => "text/plain; charset=utf-8",
-	".cc" => "text/plain; charset=utf-8",
-	".conf" => "text/plain; charset=utf-8",
-	".cxx" => "text/plain; charset=utf-8",
-	".el" => "text/plain; charset=utf-8",
-	".f90" => "text/plain; charset=utf-8",
-	".h" => "text/plain; charset=utf-8",
-	".hh" => "text/plain; charset=utf-8",
-	".hxx" => "text/plain; charset=utf-8",
-	".log" => "text/plain; charset=utf-8",
-	".pm" => "text/plain; charset=utf-8",
-	".spec" => "text/plain; charset=utf-8",
-	".text" => "text/plain; charset=utf-8",
-	".txt" => "text/plain; charset=utf-8",
+	".asc" => "text/plain;charset=utf-8",
+	".c" => "text/plain;charset=utf-8",
+	".cc" => "text/plain;charset=utf-8",
+	".conf" => "text/plain;charset=utf-8",
+	".cxx" => "text/plain;charset=utf-8",
+	".el" => "text/plain;charset=utf-8",
+	".f90" => "text/plain;charset=utf-8",
+	".h" => "text/plain;charset=utf-8",
+	".hh" => "text/plain;charset=utf-8",
+	".hxx" => "text/plain;charset=utf-8",
+	".log" => "text/plain;charset=utf-8",
+	".pm" => "text/plain;charset=utf-8",
+	".spec" => "text/plain;charset=utf-8",
+	".text" => "text/plain;charset=utf-8",
+	".txt" => "text/plain;charset=utf-8",
 	".provn" => "text/provenance-notation",
 	".rst" => "text/prs.fallenstein.rst",
 	".dsc" => "text/prs.lines.tag",
 	".tag" => "text/prs.lines.tag",
 	".rtx" => "text/richtext",
-	".sgm" => "text/sgml",
-	".sgml" => "text/sgml",
+	".shaclc" => "text/shaclc",
+	".shc" => "text/shaclc",
+	".spdx" => "text/spdx",
 	".tsv" => "text/tab-separated-values",
 	".roff" => "text/troff",
 	".t" => "text/troff",
@@ -1248,6 +1277,7 @@ mimetype.assign = (
 	".flx" => "text/vnd.fmi.flexstor",
 	".dot" => "text/vnd.graphviz",
 	".gv" => "text/vnd.graphviz",
+	".hans" => "text/vnd.hans",
 	".hgl" => "text/vnd.hgl",
 	".3dm" => "text/vnd.in3d.3dml",
 	".3dml" => "text/vnd.in3d.3dml",
@@ -1330,8 +1360,8 @@ mimetype.assign = (
 	".movie" => "video/x-sgi-movie",
 	".ice" => "x-conference/x-cooltalk",
 	".sisx" => "x-epoc/x-sisx-app",
-	"README" => "text/plain; charset=utf-8",
-	"Makefile" => "text/x-makefile; charset=utf-8",
+	"README" => "text/plain;charset=utf-8",
+	"Makefile" => "text/x-makefile;charset=utf-8",
 
 	# enable caching for unknown mime types:
 	"" => "application/octet-stream"
