--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -37,7 +37,7 @@ option(WITH_ZSTD "with zstd-support for mod_deflate [default: off]")
 option(WITH_KRB5 "with Kerberos5-support for mod_auth [default: off]")
 option(WITH_LDAP "with LDAP-support for mod_auth mod_vhostdb_ldap [default: off]")
 option(WITH_PAM "with PAM-support for mod_auth [default: off]")
-option(WITH_LUA "with lua 5.1 for mod_magnet [default: off]")
+option(WITH_LUA "with lua for mod_magnet [default: off]")
 # option(WITH_VALGRIND "with internal support for valgrind [default: off]")
 option(WITH_FAM "fam/gamin for reducing number of stat() calls [default: off]")
 option(WITH_LIBDEFLATE "with libdeflate-support for mod_deflate [default: off]")
