[multiple] application/javascript text/javascript
translate MIME type "application/javascript" to "text/javascript"

(if required, type may still be overwritten by mod_setenv or mod_magnet)

x-ref:
  "Updates to ECMAScript Media Types"
  https://www.rfc-editor.org/rfc/rfc9239

--- a/doc/config/conf.d/mime.conf
+++ b/doc/config/conf.d/mime.conf
@@ -113,7 +113,6 @@ mimetype.assign = (
 	".inkml" => "application/inkml+xml",
 	".ipfix" => "application/ipfix",
 	".its" => "application/its+xml",
-	".js" => "application/javascript",
 	".jrd" => "application/jrd+json",
 	".json" => "application/json",
 	".json-patch" => "application/json-patch+json",
@@ -1223,6 +1222,8 @@ mimetype.assign = (
 	".htm" => "text/html",
 	".html" => "text/html",
 	".sandboxed" => "text/html-sandboxed",
+	".js" => "text/javascript",
+	".mjs" => "text/javascript",
 	".cnd" => "text/jcr-cnd",
 	".markdown" => "text/markdown;charset=utf-8",
 	".md" => "text/markdown;charset=utf-8",
