--- a/src/meson.build
+++ b/src/meson.build
@@ -905,10 +905,10 @@ test('test_common', executable('test_common',
 		't/test_base64.c',
 		't/test_buffer.c',
 		't/test_burl.c',
+		't/test_http_header.c',
+		't/test_http_kv.c',
 		't/test_keyvalue.c',
 		't/test_request.c',
-		'http_header.c',
-		'http_kv.c',
 		'log.c',
 		'fdlog.c',
 		'sock_addr.c',
