--- a/doc/config/lighttpd.conf
+++ b/doc/config/lighttpd.conf
@@ -388,7 +388,7 @@ static-file.exclude-extensions = ( ".php", ".pl", ".fcgi", ".scgi" )
 ## Format: <errorfile-prefix><status-code>.html
 ## -> ..../status-404.html for 'File not found'
 ##
-#server.errorfile-prefix    = "/srv/www/htdocs/errors/status-"
+#server.errorfile-prefix    = server_root + "/htdocs/errors/status-"
 
 ##
 ## mimetype mapping
