meson: add missing meson_version
This makes it clear which version of meson is to be targeted.

Signed-off-by: Rosen Penev <rosenp@gmail.com>

--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,10 @@
-project('lighttpd', 'c', version: '1.4.68', license: 'BSD-3-Clause',
-  default_options : ['c_std=c11']
+project(
+  'lighttpd',
+  'c',
+  version: '1.4.68',
+  license: 'BSD-3-Clause',
+  default_options: ['c_std=c11'],
+  meson_version: '>=0.40.0',
 )
 
 subdir('src')
