meson: use feature options
Simpler. Fixed up several wrong stuff such as

zstd - wrong name
zlib - extra windows handling unnecessary. dependency('zlib') is
special and handles those cases.
sasl2 - wrong name

Signed-off-by: Rosen Penev <rosenp@gmail.com>

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,26 +1,26 @@
 option('with_brotli',
-	type: 'boolean',
-	value: false,
+	type: 'feature',
+	value: 'disabled',
 	description: 'with brotli-support for mod_deflate [default: off]',
 )
 option('with_bzip',
-	type: 'boolean',
-	value: false,
+	type: 'feature',
+	value: 'disabled',
 	description: 'with bzip2-support for mod_deflate [default: off]',
 )
 option('with_dbi',
-	type: 'boolean',
-	value: false,
+	type: 'feature',
+	value: 'disabled',
 	description: 'with dbi-support for mod_auth mod_vhostdb_dbi [default: off]',
 )
 option('with_libdeflate',
-	type: 'boolean',
-	value: false,
+	type: 'feature',
+	value: 'disabled',
 	description: 'with libdeflate-support for mod_deflate [default: off]',
 )
 option('with_fam',
-	type: 'boolean',
-	value: false,
+	type: 'feature',
+	value: 'disabled',
 	description: 'fam/gamin for reducing number of stat() calls [default: off]',
 )
 option('with_gnutls',
@@ -29,23 +29,23 @@ option('with_gnutls',
 	description: 'with GnuTLS-support [default: off]',
 )
 option('with_krb5',
-	type: 'boolean',
-	value: false,
+	type: 'feature',
+	value: 'disabled',
 	description: 'with Kerberos5-support for mod_auth [default: off]',
 )
 option('with_ldap',
-	type: 'boolean',
-	value: false,
+	type: 'feature',
+	value: 'disabled',
 	description: 'with LDAP-support for mod_auth mod_vhostdb_ldap [default: off]',
 )
 option('with_libev',
-	type: 'boolean',
-	value: false,
+	type: 'feature',
+	value: 'disabled',
 	description: 'libev support for fdevent handlers [default: off]',
 )
 option('with_libunwind',
-	type: 'boolean',
-	value: false,
+	type: 'feature',
+	value: 'disabled',
 	description: 'with libunwind to print backtraces in asserts [default: off]',
 )
 option('with_lua',
@@ -54,8 +54,8 @@ option('with_lua',
 	description: 'with lua for mod_magnet [default: off]',
 )
 option('with_maxminddb',
-	type: 'boolean',
-	value: false,
+	type: 'feature',
+	value: 'disabled',
 	description: 'with MaxMind GeoIP2-support mod_maxminddb [default: off]',
 )
 option('with_mbedtls',
@@ -64,8 +64,8 @@ option('with_mbedtls',
 	description: 'with mbedTLS-support [default: off]',
 )
 option('with_mysql',
-	type: 'boolean',
-	value: false,
+	type: 'feature',
+	value: 'disabled',
 	description: 'with mysql-support for mod_vhostdb_mysql [default: off]',
 )
 option('with_nettle',
@@ -84,8 +84,8 @@ option('with_openssl',
 	description: 'with openssl-support [default: off]',
 )
 option('with_pam',
-	type: 'boolean',
-	value: false,
+	type: 'feature',
+	value: 'disabled',
 	description: 'with PAM-support for mod_auth [default: off]',
 )
 option('with_pcre2',
@@ -99,13 +99,13 @@ option('with_pcre',
 	description: 'with regex support [default: off]',
 )
 option('with_pgsql',
-	type: 'boolean',
-	value: false,
+	type: 'feature',
+	value: 'disabled',
 	description: 'with postgres-support for mod_vhostdb_pgsql [default: off]',
 )
 option('with_sasl',
-	type: 'boolean',
-	value: false,
+	type: 'feature',
+	value: 'disabled',
 	description: 'with SASL support for mod_authn_sasl [default: off]',
 )
 #option('with_valgrind',
@@ -114,13 +114,13 @@ option('with_sasl',
 #	description: 'with internal support for valgrind [default: off]',
 #)
 option('with_webdav_locks',
-	type: 'boolean',
-	value: false,
+	type: 'feature',
+	value: 'disabled',
 	description: 'locks in webdav [default: off]',
 )
 option('with_webdav_props',
-	type: 'boolean',
-	value: false,
+	type: 'feature',
+	value: 'disabled',
 	description: 'with property-support for mod_webdav [default: off]',
 )
 option('with_wolfssl',
@@ -134,18 +134,18 @@ option('with_xattr',
 	description: 'with xattr-support for the stat-cache [default: off]',
 )
 option('with_xxhash',
-	type: 'boolean',
-	value: false,
+	type: 'feature',
+	value: 'disabled',
 	description: 'with system-provided libxxhash [default: off]',
 )
 option('with_zlib',
-	type: 'boolean',
-	value: true,
+	type: 'feature',
+	value: 'enabled',
 	description: 'with deflate-support for mod_deflate [default: on]',
 )
 option('with_zstd',
-	type: 'boolean',
-	value: false,
+	type: 'feature',
+	value: 'disabled',
 	description: 'with zstd-support for mod_deflate [default: off]',
 )
 
